--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -163,8 +163,10 @@
     "proximity_tracing_info_subheader_2": "Is my data secure?"
   },
   "label": {
+    "activate_proximity_tracing": "Activate Proximity Tracing",
     "check": "Checkmark",
     "checked_checkbox": "Checked checkbox",
+    "go_to_home_view": "Go to Home view",
     "language_icon": "Outlined icon of a globe",
     "launch_enable_notif": "Enable Notifications",
     "launch_get_started": "Get Started",
@@ -184,6 +186,11 @@
     "self_assessment": "Self Assessment"
   },
   "onboarding": {
+    "app_setup_complete_header": "App Setup Complete!",
+    "app_setup_incomplete_header": "App Setup Incomplete",
+    "app_setup_complete_body": "{{applicationName}} is active. Thank you for helping break the chain of infection.",
+    "app_setup_incomplete_body": "{{applicationName}} requires Proximity Tracing and Bluetooth permissions to know when  and where you have been exposed to COVID 19. You can authorize this in Settings.",
+    "app_setup_incomplete_location_body": "{{applicationName}} requires Proximity Tracing, Bluetooth, and Location permissions to know when and where you have been exposed to COVID 19. You can authorize this in Settings.",
     "activation_header_title": "App Setup",
     "eula_agree_terms_of_use": "I agree that I have read and accepted the terms of use",
     "notification_body1": "You’ll receive notifications when you may have been in close proximity with someone who has reported testing positive for COVID-19.",
