--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -91,7 +91,17 @@
       "verification_code_used": "Verification code has already been used"
     },
     "publish_consent_title_bluetooth": "Notify others in your community",
-    "start_header_bluetooth": "Help contain the spread of the virus and protect others in your community"
+    "start_header_bluetooth": "Help contain the spread of the virus and protect others in your community",
+    "publish_keys": {
+      "no_op": {
+        "title": "Attempt to submit existing keys",
+        "no_token_for_existing_keys": "Existing data was sent to the server. This usually means that this process was attempted previously from this device, but on a different application. You can communicate this to the authority that provided the verification code that was used. There were {{newKeysInserted}} new keys added."
+      },
+      "errors": {
+        "unknown": "Failed to submit the exposure data",
+        "description": "The operation could not be completed. {{message}}"
+      }
+    }
   },
   "exposure_history": {
     "exposure_detail": {
