--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -42,12 +42,14 @@
   },
   "common": {
     "alert": "Alert",
+    "allow": "",
     "back": "Back",
     "cancel": "Cancel",
     "close": "Close",
     "continue": "Continue",
     "disabled": "Disabled",
     "done": "Done",
+    "dontAllow": "",
     "enable": "Enable",
     "enabled": "Enabled",
     "maybe_later": "Maybe later",
@@ -85,8 +87,8 @@
     "enable_exposure_notifications_body": "You must enable exposure notifcations to report a positive test result.",
     "enable_exposure_notifications_title": "Enable exposure notifications to continue",
     "error": {
-      "invalid_format": "Invalid format",
       "invalid_code": "Try a different code",
+      "invalid_format": "Invalid format",
       "unknown_code_verification_error": "Try a different code",
       "verification_code_used": "Verification code has already been used"
     },
@@ -175,11 +177,11 @@
     "proximity_tracing_info_subheader_2": "Is my data secure?"
   },
   "label": {
-    "activate_proximity_tracing": "Activate Proximity Tracing",
     "check": "Checkmark",
     "checked_checkbox": "Checked checkbox",
     "go_to_home_view": "Go to Home view",
     "language_icon": "Outlined icon of a globe",
+    "launch_activate_location": "Activate Location",
     "launch_enable_notif": "Enable Notifications",
     "launch_get_started": "Get Started",
     "launch_screen1_header": "Welcome to ",
@@ -198,23 +200,25 @@
     "self_assessment": "Self Assessment"
   },
   "onboarding": {
-    "app_setup_complete_header": "App Setup Complete!",
-    "app_setup_incomplete_header": "App Setup Incomplete",
-    "app_setup_complete_body": "{{applicationName}} is active. Thank you for helping break the chain of infection.",
-    "app_setup_incomplete_body": "{{applicationName}} requires Proximity Tracing and Bluetooth permissions to know when  and where you have been exposed to COVID 19. You can authorize this in Settings.",
-    "app_setup_incomplete_location_body": "{{applicationName}} requires Proximity Tracing, Bluetooth, and Location permissions to know when and where you have been exposed to COVID 19. You can authorize this in Settings.",
     "activation_header_title": "App Setup",
+    "app_setup_complete_body": "{{applicationName}} is active. Thank you for helping break the chain of infection.",
+    "app_setup_complete_header": "App Setup Complete!",
+    "app_setup_incomplete_body": "{{applicationName}} requires Proximity Tracing and Bluetooth permissions to know when  and where you have been exposed to COVID 19. You can authorize this in Settings.",
+    "app_setup_incomplete_header": "App Setup Incomplete",
+    "app_setup_incomplete_location_body": "{{applicationName}} requires Proximity Tracing, Bluetooth, and Location permissions to know when and where you have been exposed to COVID 19. You can authorize this in Settings.",
     "eula_agree_terms_of_use": "I agree that I have read and accepted the terms of use",
-    "please_read_the": "Please read the",
-    "privacy_policy": "Privacy Policy",
-    "eula": "End User Legal Agreement",
-    "terms_header_title": "Terms of use",
+    "location_alert_header": "Enable Location access from \"{{applicationName}}\"",
+    "location_alert_body": "To use Bluetooth scanning, the device location setting needs to be turned on.",
+    "location_body": "To use Bluetooth scanning, the device location setting needs to be turned on. The app does not use your location data and your individual device cannot be tracked.",
+    "location_header": "Activate Location",
+    "location_subheader": "Why do I need to turn on my phone's location setting?",
     "notification_body1": "You’ll receive notifications when you may have crossed paths with someone who has reported positive for COVID-19.",
     "notification_body2": "The app does this using Bluetooth Low Energy and secure random codes without knowing who you are or where you’ve been. You can turn this off at any time in settings.",
     "notification_header": "Get notified if you may have been exposed",
     "notification_subheader1": "When will I get notified?",
     "notification_subheader2": "How does it work?",
     "notification_subheader3": "This app does not protect you from COVID-19 infection.",
+    "please_read_the": "Please read the",
     "protect_privacy_button": "How we protect your privacy",
     "protect_privacy": {
       "body_1": "These IDs do not contain any personal information and change every 10-20 minutes to protect your identity.",
@@ -255,6 +259,7 @@
     "screen5_image_label": "A person talking to a health expert virtually",
     "select_language": "Select Language",
     "step": "Step {{currentStep}} of {{totalSteps}}",
+    "terms_header_title": "Terms of use",
     "welcome_image_label": "An illustration of people with masks on, connected like nodes in a network."
   },
   "report_issue": {
