--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -99,6 +99,7 @@
       },
       "errors": {
         "unknown": "Failed to submit the exposure data",
+        "timeout": "The request took too long to complete",
         "description": "The operation could not be completed. {{message}}"
       }
     }
