push to activation summary when user turns on location

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -22,6 +22,9 @@
     "launch_get_started": "ابدأ",
     "launch_screen1_header": "طريق العودة إلى الوضع الطبيعي يبدأ من هنا"
   },
+  "onboarding": {
+    "terms_header_title": "تعليمات الاستخدام"
+  },
   "screen_titles": {
     "about": "نبذة عنا",
     "legal": "النظام القانوني"
