--- a/src/locales/el.json
+++ b/src/locales/el.json
@@ -196,6 +196,7 @@
     "notification_subheader1": "Πότε θα ειδοποιηθώ;",
     "notification_subheader2": "Πώς δουλεύει;",
     "notification_subheader3": "Αυτή η εφαρμογή δεν σας προστατεύει από την λοίμωξη του COVID-19.",
+    "privacy_policy": "Πολιτική Απορρήτου",
     "protect_privacy_button": "Πώς προστατεύουμε τα προσωπικά σας δεδομένα",
     "protect_privacy": {
       "body_1": "Αυτοί οι κωδικοί δεν περιέχουν προσωπικά στοιχεία και αλλάζουν κάθε 10-20 λεπτά για να προστατεύσουν την ταυτότητά σας.",
@@ -236,6 +237,7 @@
     "screen5_image_label": "Ένα άτομο που μιλάει ψηφιακά σε έναν εμπειρογνώμονα υγείας",
     "select_language": "Επιλογή γλώσσας",
     "step": "Βήμα {{currentStep}} από {{totalSteps}}",
+    "terms_header_title": "Όροι χρήσης",
     "welcome_image_label": "Μια απεικόνιση ατόμων με μάσκες, συνδεδεμένες σαν κόμβους σε ένα δίκτυο."
   },
   "report_issue": {
