--- a/src/locales/da.json
+++ b/src/locales/da.json
@@ -24,6 +24,10 @@
     "launch_get_started": "Lad os komme i gang",
     "privacy_policy": "Privatlivspolitik"
   },
+  "onboarding": {
+    "privacy_policy": "Privatlivspolitik",
+    "terms_header_title": "Vilkår for brug"
+  },
   "screen_titles": {
     "about": "Om",
     "legal": "Juridisk"
