--- a/src/locales/ml_IN.json
+++ b/src/locales/ml_IN.json
@@ -22,6 +22,10 @@
     "launch_get_started": "ആരംഭിക്കുക",
     "privacy_policy": "സ്വകാര്യതാ നയം"
   },
+  "onboarding": {
+    "privacy_policy": "സ്വകാര്യതാ നയം",
+    "terms_header_title": "നിബന്ധനകൾ"
+  },
   "screen_titles": {
     "about": "വിവരങ്ങൾ",
     "legal": "നിയമപരമായ വിവരങ്ങൾ"
