--- a/src/locales/nl.json
+++ b/src/locales/nl.json
@@ -21,6 +21,9 @@
     "launch_enable_notif": "Meldingen inschakelen",
     "launch_get_started": "Aan de slag"
   },
+  "onboarding": {
+    "terms_header_title": "Gebruiksvoorwaarden"
+  },
   "screen_titles": {
     "about": "Informatie",
     "legal": "Juridisch"
