--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -62,6 +62,10 @@
     "more": "Więcej",
     "self_assessment": "Zdrowie"
   },
+  "onboarding": {
+    "privacy_policy": "Polityka prywatności",
+    "terms_header_title": "Warunki korzystania"
+  },
   "screen_titles": {
     "about": "O nas",
     "exposure_history": "Historia Ekspozycji",
