--- a/src/locales/ro.json
+++ b/src/locales/ro.json
@@ -14,6 +14,9 @@
     "launch_enable_notif": "Permite Notificari",
     "launch_get_started": "Începe"
   },
+  "onboarding": {
+    "terms_header_title": "Termeni de folosire"
+  },
   "screen_titles": {
     "about": "Despre",
     "legal": "Legal"
