--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -14,6 +14,9 @@
     "launch_enable_notif": "Cho phép gửi thông báo",
     "launch_get_started": "Bắt đầu"
   },
+  "onboarding": {
+    "terms_header_title": "Điều khoản sử dụng"
+  },
   "screen_titles": {
     "about": "Giới thiệu",
     "legal": "Pháp lý"
