--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -66,9 +66,7 @@
     "more": "Подробнее"
   },
   "onboarding": {
-    "notification_header": "Хотите получать уведомления, если окажетесь поблизости с носителем вируса?",
-    "privacy_policy": "Политика конфиденциальности",
-    "terms_header_title": "Условия использования"
+    "notification_header": "Хотите получать уведомления, если окажетесь поблизости с носителем вируса?"
   },
   "screen_titles": {
     "about": "О нас",
