--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -74,9 +74,7 @@
     "self_assessment": "Salute"
   },
   "onboarding": {
-    "notification_header": "Desideri ricevere notifiche quando potresti aver incrociato percorsi con il virus?",
-    "privacy_policy": "Informativa sulla privacy",
-    "terms_header_title": "Termini per l'utilizzo"
+    "notification_header": "Desideri ricevere notifiche quando potresti aver incrociato percorsi con il virus?"
   },
   "screen_titles": {
     "about": "Informazioni",
