--- a/src/locales/tl.json
+++ b/src/locales/tl.json
@@ -75,9 +75,7 @@
     "self_assessment": "Kalusugan"
   },
   "onboarding": {
-    "notification_header": "Nais mo bang makatanggap ng mga abiso o mga notifications kung mayroon kang napuntahan o nakasalamuha na tao, gamit o lugar na posibleng may virus?",
-    "privacy_policy": "Patakaran sa Pagkapribado",
-    "terms_header_title": "Mga Tuntunin ng Paggamit"
+    "notification_header": "Nais mo bang makatanggap ng mga abiso o mga notifications kung mayroon kang napuntahan o nakasalamuha na tao, gamit o lugar na posibleng may virus?"
   },
   "screen_titles": {
     "about": "Tungkol",
