--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -176,6 +176,7 @@
   },
   "label": {
     "activate_proximity_tracing": "Activate Proximity Tracing",
+    "launch_activate_location": "Activate Location",
     "check": "Checkmark",
     "checked_checkbox": "Checked checkbox",
     "go_to_home_view": "Go to Home view",
@@ -205,6 +206,11 @@
     "app_setup_incomplete_location_body": "{{applicationName}} requires Proximity Tracing, Bluetooth, and Location permissions to know when and where you have been exposed to COVID 19. You can authorize this in Settings.",
     "activation_header_title": "App Setup",
     "eula_agree_terms_of_use": "I agree that I have read and accepted the terms of use",
+    "location_alert_header": "Enable Location access from \"{{applicationName}}\"",
+    "location_alert_body": "To use Bluetooth scanning, the device location setting needs to be turned on.",
+    "location_body": "To use Bluetooth scanning, the device location setting needs to be turned on. The app does not use your location data and your individual device cannot be tracked.",
+    "location_header": "Activate Location",
+    "location_subheader": "Why do I need to turn on my phone's location setting?",
     "please_read_the": "Please read the",
     "privacy_policy": "Privacy Policy",
     "eula": "End User Legal Agreement",
