Retry post diagnosis request when necessary
Why:
----
Some responses from the post diagnosis keys endpoint return with a retry
http status code. We should honor these and retry the request when
necessary.

How:
----
A document was shared about which error values deemed a retry response.
this was used to determine the responses, in the case of the post
diagnosis endpoint, only `internal_error` and the responses with
redirect headers `429` and `503`

This Commit:
----
- Adds retry logic to postDiagnosisKeys request
- Add post keys error for internal error message

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -100,7 +100,8 @@
       "errors": {
         "unknown": "Failed to submit the exposure data",
         "timeout": "The request took too long to complete",
-        "description": "The operation could not be completed. {{message}}"
+        "description": "The operation could not be completed. {{message}}",
+        "internal_server_error": "The server is experiencing problems, please try again later"
       }
     }
   },
