Replace raw English text with translations in MainNavigator

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -200,7 +200,9 @@
     "home": "Home",
     "more": "More",
     "report_issue": "Report Issue",
-    "self_assessment": "Self Assessment"
+    "self_assessment": "Self Assessment",
+    "more_info": "More Info",
+    "exposure": "Exposure"
   },
   "onboarding": {
     "app_setup_complete_header": "App Setup Complete!",
