--- a/src/locales/es_PR.json
+++ b/src/locales/es_PR.json
@@ -135,7 +135,6 @@
       "bluetooth_disabled_error_message": "Active el Bluetooth visitando la configuración de la aplicación",
       "bluetooth_disabled_error_title": "Active el Bluetooth visitando la Configuración",
       "bluetooth_header": "Bluetooth",
-      "fix": "Arreglar",
       "location_disabled_error_title": "Autorizar en la configuración del sistema",
       "proximity_tracing_header": "Rastreo de Proximidad",
       "report_positive_result": "Informar resultado positivo de la prueba",
@@ -184,6 +183,7 @@
     "notification_subheader1": "¿Cuando recibiré la notificación?",
     "notification_subheader2": "¿Cómo funciona?",
     "notification_subheader3": "Esta aplicación no te protege de la infección por COVID-19.",
+    "privacy_policy": "Política de privacidad",
     "protect_privacy_button": "Cómo protegemos su privacidad",
     "protect_privacy": {
       "body_1": "Estos códigos no contienen información personal y cambian cada 10 - 20 minutos para proteger su identidad.",
@@ -224,6 +224,7 @@
     "screen5_image_label": "Una persona conversando virtualmente con un profesional de la salud",
     "select_language": "Seleccionar idioma",
     "step": "Paso {{currentStep}} de {{totalSteps}}",
+    "terms_header_title": "Términos de Uso",
     "welcome_image_label": "Una ilustración de personas usando máscaras, conectadas como nodos en una red."
   },
   "report_issue": {
