--- a/src/locales/ht_HT.json
+++ b/src/locales/ht_HT.json
@@ -76,7 +76,6 @@
       "bluetooth_disabled_error_message": "Aktive Bluetooth nan tablodbò aplikasyon an",
       "bluetooth_disabled_error_title": "Aktive Bluetooth nan tablodbò ",
       "bluetooth_header": "Bluetooth",
-      "fix": "Ranje",
       "proximity_tracing_header": "Trasaj Pwoksimite ",
       "report_positive_result": "Rapòte yon rezilta tès pozitif",
       "tracing_off_header": "Notifikasyon ekspozisyon dezaktive",
@@ -105,6 +104,7 @@
   },
   "onboarding": {
     "notification_header": "Èske ou ta renmen resevwa notifikasyon lè ou ka te kwaze chemen ak viris la?",
+    "privacy_policy": "Règleman sou enfòmasyon prive",
     "protect_privacy_button": "Ki jan nou pwoteje vi prive ou",
     "protect_privacy": {
       "header": "Ki jan nou pwoteje vi prive ou"
@@ -119,6 +119,7 @@
     "screen3_button": "E si mwen ekspoze?",
     "select_language": "Chwazi lang",
     "step": "Etap {{currentStep}} nan {{totalSteps}}",
+    "terms_header_title": "Règleman itilizasyon",
     "welcome_image_label": "Yon ilistrasyon moun ki gen mask, ki konekte tankou ne nan yon rezo."
   },
   "report_issue": {
